--- a/Notebooks2022/build_a_thon_graph_v1.ipynb
+++ b/Notebooks2022/build_a_thon_graph_v1.ipynb
@@ -42,13 +42,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 27,
+      "execution_count": 1,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "hKFE_mBLcWJL",
-        "outputId": "c9b41640-c888-4041-9bb9-1f2c4a39ec0b"
+        "outputId": "a527ac09-a078-417a-fcb0-1ca3fa01a7ae"
       },
       "outputs": [
         {
@@ -56,8 +56,17 @@
           "name": "stdout",
           "text": [
             "Looking in indexes: https://pypi.org/simple, https://us-python.pkg.dev/colab-wheels/public/simple/\n",
-            "Requirement already satisfied: neo4j in /usr/local/lib/python3.7/dist-packages (4.4.3)\n",
-            "Requirement already satisfied: pytz in /usr/local/lib/python3.7/dist-packages (from neo4j) (2022.1)\n"
+            "Collecting neo4j\n",
+            "  Downloading neo4j-4.4.3.tar.gz (90 kB)\n",
+            "\u001b[K     |████████████████████████████████| 90 kB 4.4 MB/s \n",
+            "\u001b[?25hRequirement already satisfied: pytz in /usr/local/lib/python3.7/dist-packages (from neo4j) (2022.1)\n",
+            "Building wheels for collected packages: neo4j\n",
+            "  Building wheel for neo4j (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
+            "  Created wheel for neo4j: filename=neo4j-4.4.3-py3-none-any.whl size=116069 sha256=5fe9fc26fd2291765067079f74358f5dd929f5680797ead39f6531b38e82a6b6\n",
+            "  Stored in directory: /root/.cache/pip/wheels/db/dd/76/acacd519878f133f2f869aec70db548d89e04013209c3c62bc\n",
+            "Successfully built neo4j\n",
+            "Installing collected packages: neo4j\n",
+            "Successfully installed neo4j-4.4.3\n"
           ]
         }
       ],
@@ -76,7 +85,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 28,
+      "execution_count": 2,
       "metadata": {
         "id": "CMXk5yZcd-Jt"
       },
@@ -98,7 +107,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 128,
+      "execution_count": 36,
       "metadata": {
         "id": "FccBUxEIeKf_"
       },
@@ -116,14 +125,49 @@
         "        self.driver.close()\n",
         "\n",
         "    #Vishnu: 1 Jun 2022: created this f() to create nodes with usecase label\n",
-        "    #TBD: check if it already exists.\n",
+        "    #Vishnu: 2 Jun 2022: added- check if it already exists.\n",
+        "    #Vishnu: 2 Jun 2022: added- check the label duplication, adds a label if it doesnt exist.\n",
+        "    #otherwise ignores the command.\n",
+        "    #uses _add_label_and_return_existing_node()\n",
         "    def create_node_with_label(self, actor_name, usecase_id):\n",
         "        with self.driver.session() as session:\n",
         "            # Write transactions allow the driver to handle retries and transient errors\n",
-        "            result = session.write_transaction(\n",
-        "                self._create_and_return_node, actor_name, usecase_id)\n",
-        "            for row in result:\n",
-        "                print(\"Created node: {n1}\".format(n1=row['n1']))\n",
+        "            node_already_exists = session.write_transaction(\n",
+        "                self._find_and_return_existing_node, actor_name)\n",
+        "            if not node_already_exists:  \n",
+        "                result = session.write_transaction(\n",
+        "                    self._create_and_return_node, actor_name, usecase_id)\n",
+        "                for row in result:\n",
+        "                    print(\"Created node: {n1}\".format(n1=row['n1']))\n",
+        "            else:\n",
+        "                for row in node_already_exists:\n",
+        "                    print(\"Node already exists: {name} in {usecase}\".format(name=row['name'], \n",
+        "                                                                 usecase=row['label']))\n",
+        "                    if not any(usecase_id in s for s in row['label']):\n",
+        "                      print(\"adding label \"+usecase_id+ \"...\")\n",
+        "                      result = session.write_transaction(\n",
+        "                                self._add_label_and_return_existing_node, actor_name, usecase_id)\n",
+        "                    else:\n",
+        "                      print(\"ignoring ...\")\n",
+        "\n",
+        "\n",
+        "    #Vishnu: 2 Jun 2022: created this f() to query nodes and return with usecase label\n",
+        "    @staticmethod\n",
+        "    def _find_and_return_existing_node(tx, actor_name):\n",
+        "        query = (\n",
+        "            \"MATCH (n:Actor) \"\n",
+        "            \"WHERE (n.name ='\" + actor_name + \"') \"\n",
+        "            \"RETURN n.name as name, labels(n) as label\"\n",
+        "        )\n",
+        "        result = tx.run(query)\n",
+        "        try:\n",
+        "            return [{\"name\": row[\"name\"],\"label\": row[\"label\"]} \n",
+        "                    for row in result]\n",
+        "        # Capture any errors along with the query and data for traceability\n",
+        "        except ServiceUnavailable as exception:\n",
+        "            logging.error(\"{query} raised an error: \\n {exception}\".format(\n",
+        "                query=query, exception=exception))\n",
+        "            raise\n",
         "\n",
         "    @staticmethod\n",
         "    def _create_and_return_node(tx, actor_name, usecase_id):\n",
@@ -144,12 +188,14 @@
         "            raise\n",
         "\n",
         "    #Vishnu: 1 Jun 2022: created this f() to add use case label to existing nodes \n",
-        "    #TBD: check if it already exists.\n",
+        "    #CAUTION: does not check for duplication, use create_node_with_label instead.\n",
         "    def add_label_existing_node(self, actor_name, usecase_id):\n",
         "        with self.driver.session() as session:\n",
         "            # Write transactions allow the driver to handle retries and transient errors\n",
         "            result = session.write_transaction(\n",
         "                self._add_label_and_return_existing_node, actor_name, usecase_id)\n",
+        "            \n",
+        "            # we expect only 1 node. Do we need the for loop below?\n",
         "            for row in result:\n",
         "                print(\"added label to node: {n1}\".format(n1=row['n1']))\n",
         "\n",
@@ -175,7 +221,7 @@
         "            raise\n",
         "\n",
         "    #Vishnu: 1 Jun 2022: created this f() to create relation between 2 existing nodes\n",
-        "    def create_rel_with_type_existing_nodes(self, rel_type, actor1_name, actor2_name):\n",
+        "    def create_rel_with_type_existing_nodes(self, actor1_name, rel_type, actor2_name):\n",
         "        with self.driver.session() as session:\n",
         "            # Write transactions allow the driver to handle retries and transient errors\n",
         "            result = session.write_transaction(\n",
@@ -270,7 +316,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 129,
+      "execution_count": 37,
       "metadata": {
         "id": "6p2nMvmodNw4"
       },
@@ -297,13 +343,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 131,
+      "execution_count": 38,
       "metadata": {
         "id": "aiKGLHItvp2g",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "214473b7-2e7c-4a10-8639-501d0cd21920"
+        "outputId": "309a8835-3167-4ef2-9edb-7381b2a9ff8d"
       },
       "outputs": [
         {
@@ -323,6 +369,39 @@
     {
       "cell_type": "markdown",
       "source": [
+        "Example-1a: try to create duplicate node under different use case"
+      ],
+      "metadata": {
+        "id": "IlzAm-ApdU_t"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "app.create_node_with_label(\"Sandbox\", \"usecase_003\")\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "5PMotSRCdRdZ",
+        "outputId": "5ea3ad2c-ee95-4cd6-cfd6-7e1308dcec8b"
+      },
+      "execution_count": 44,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Node already exists: Sandbox in ['Actor', 'usecase_001', 'usecase_002', 'usecase_003']\n",
+            "ignoring ...\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "Example-2: Create relation between 2 existing nodes"
       ],
       "metadata": {
@@ -332,7 +411,7 @@
     {
       "cell_type": "code",
       "source": [
-        "app.create_rel_with_type_existing_nodes(\"my_best_buddy\", \"Experimentation Controller\", \"Sandbox\")\n"
+        "app.create_rel_with_type_existing_nodes(\"Experimentation Controller\", \"my_best_buddy\", \"Sandbox\")\n"
       ],
       "metadata": {
         "colab": {
@@ -341,7 +420,7 @@
         "id": "9FZGjCA0DmXT",
         "outputId": "9208b9f4-dd89-4293-f850-fca9633c538f"
       },
-      "execution_count": 132,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -373,7 +452,7 @@
         "id": "EZjZmOquOxK2",
         "outputId": "3b963641-2efb-4525-f831-82ff0c43098e"
       },
-      "execution_count": 133,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -395,7 +474,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 134,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -429,7 +508,7 @@
         "id": "XjfqC7ywQK4x",
         "outputId": "4fc5c798-122d-4df5-ce67-c0226866001d"
       },
-      "execution_count": 135,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -475,53 +554,31 @@
         "\n"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "g3-zNw1qR--U",
-        "outputId": "c4e80d13-5702-42c9-97c4-e9a17ef57e2d"
+        "id": "g3-zNw1qR--U"
       },
-      "execution_count": 137,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Created node: Knowledge Base\n",
-            "Created node: Knowledge Base Manager\n",
-            "Created node: AN Orchestrator\n",
-            "Created node: Use case description\n",
-            "Created node: TOSCA format\n",
-            "Created node: Auto controller generator\n",
-            "Created node: controller repository\n",
-            "Created node: controllers\n",
-            "Created node: ML model\n",
-            "Created node: Human operator\n",
-            "Created node: reports\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "app.create_rel_with_type_existing_nodes(\"import\", \"Knowledge Base\", \"Knowledge Base\")\n",
-        "app.create_rel_with_type_existing_nodes(\"export\", \"Knowledge Base\", \"Knowledge Base\")\n",
+        "app.create_rel_with_type_existing_nodes(\"Knowledge Base\", \"import\", \"Knowledge Base\")\n",
+        "app.create_rel_with_type_existing_nodes(\"Knowledge Base\", \"export\", \"Knowledge Base\")\n",
         "\n",
-        "app.create_rel_with_type_existing_nodes(\"optimizes\", \"Knowledge Base Manager\", \"Knowledge Base\")\n",
-        "app.create_rel_with_type_existing_nodes(\"export\", \"Knowledge Base Manager\", \"Knowledge Base\")\n",
+        "app.create_rel_with_type_existing_nodes(\"Knowledge Base Manager\", \"optimizes\", \"Knowledge Base\")\n",
+        "app.create_rel_with_type_existing_nodes(\"Knowledge Base Manager\", \"export\", \"Knowledge Base\")\n",
         "\n",
-        "app.create_rel_with_type_existing_nodes(\"refer\", \"AN Orchestrator\", \"Knowledge Base\")\n",
-        "app.create_rel_with_type_existing_nodes(\"input\", \"AN Orchestrator\", \"Use case description\")\n",
-        "app.create_rel_with_type_existing_nodes(\"output\", \"AN Orchestrator\", \"TOSCA format\")\n",
+        "app.create_rel_with_type_existing_nodes(\"AN Orchestrator\", \"refer\", \"Knowledge Base\")\n",
+        "app.create_rel_with_type_existing_nodes(\"AN Orchestrator\", \"input\", \"Use case description\")\n",
+        "app.create_rel_with_type_existing_nodes(\"AN Orchestrator\", \"output\", \"TOSCA format\")\n",
         "\n",
-        "app.create_rel_with_type_existing_nodes(\"refer\", \"Auto controller generator\", \"Knowledge Base\")\n",
-        "app.create_rel_with_type_existing_nodes(\"output\", \"Auto controller generator\", \"TOSCA format\")\n",
+        "app.create_rel_with_type_existing_nodes(\"Auto controller generator\", \"refer\", \"Knowledge Base\")\n",
+        "app.create_rel_with_type_existing_nodes(\"Auto controller generator\", \"output\", \"TOSCA format\")\n",
         "\n",
-        "app.create_rel_with_type_existing_nodes(\"stores\", \"controller repository\", \"controllers\")\n",
-        "app.create_rel_with_type_existing_nodes(\"recommends\", \"ML model\", \"controllers\")\n",
+        "app.create_rel_with_type_existing_nodes(\"controller repository\", \"stores\", \"controllers\")\n",
+        "app.create_rel_with_type_existing_nodes(\"ML model\", \"recommends\", \"controllers\")\n",
         "\n",
-        "app.create_rel_with_type_existing_nodes(\"input\", \"Human operator\", \"reports\")\n",
+        "app.create_rel_with_type_existing_nodes(\"Human operator\", \"input\", \"reports\")\n",
         "\n",
         "\n",
         "\n"
@@ -531,9 +588,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "w6w8dt-QUUX8",
-        "outputId": "96e64eb5-3db2-4110-ca69-bba478662fc8"
+        "outputId": "84739184-8e10-48cf-ddc0-2b42e876a85f"
       },
-      "execution_count": 138,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
@@ -556,6 +613,39 @@
       ]
     },
     {
+      "cell_type": "code",
+      "source": [
+        "app.find_all_usecase_actors(\"usecase_001\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "dD7NR950Ry-N",
+        "outputId": "dc1766a9-5f80-4aa4-f5ab-074ec2f94db8"
+      },
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Found actor-1: Knowledge Base Manager\n",
+            "Found actor-2: AN Orchestrator\n",
+            "Found actor-3: Knowledge Base\n",
+            "Found actor-4: Use case description\n",
+            "Found actor-5: TOSCA format\n",
+            "Found actor-6: Auto controller generator\n",
+            "Found actor-7: controller repository\n",
+            "Found actor-8: controllers\n",
+            "Found actor-9: ML model\n",
+            "Found actor-10: Human operator\n",
+            "Found actor-11: reports\n"
+          ]
+        }
+      ]
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "id": "eBr7q13XvyeB"
@@ -566,7 +656,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 139,
+      "execution_count": null,
       "metadata": {
         "id": "J2ak5OTtvrLd"
       },
@@ -581,7 +671,7 @@
       "collapsed_sections": [],
       "name": "build-a-thon-graph-v1.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyM7+l9YRXtytPgpOglHSXMq",
+      "authorship_tag": "ABX9TyPXmMJkVV4BLg3opDsSfUfi",
       "include_colab_link": true
     },
     "interpreter": {
