--- a/Notebooks2022/build_a_thon_graph_v1.ipynb
+++ b/Notebooks2022/build_a_thon_graph_v1.ipynb
@@ -554,10 +554,32 @@
         "\n"
       ],
       "metadata": {
-        "id": "g3-zNw1qR--U"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "g3-zNw1qR--U",
+        "outputId": "9648c305-6c18-4223-ad22-757d9870fb15"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 51,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Created node: Knowledge Base\n",
+            "Created node: Knowledge Base Manager\n",
+            "Created node: AN Orchestrator\n",
+            "Created node: Use case description\n",
+            "Created node: TOSCA format\n",
+            "Created node: Auto controller generator\n",
+            "Created node: controller repository\n",
+            "Created node: controllers\n",
+            "Created node: ML model\n",
+            "Created node: Human operator\n",
+            "Created node: reports\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -579,6 +601,7 @@
         "app.create_rel_with_type_existing_nodes(\"ML model\", \"recommends\", \"controllers\")\n",
         "\n",
         "app.create_rel_with_type_existing_nodes(\"Human operator\", \"input\", \"reports\")\n",
+        "app.create_rel_with_type_existing_nodes(\"Human operator\", \"monitors\", \"reports\")\n",
         "\n",
         "\n",
         "\n"
@@ -588,9 +611,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "w6w8dt-QUUX8",
-        "outputId": "84739184-8e10-48cf-ddc0-2b42e876a85f"
+        "outputId": "e0e0031e-b38d-4332-bc6f-3d7c4d1c62db"
       },
-      "execution_count": 6,
+      "execution_count": 52,
       "outputs": [
         {
           "output_type": "stream",
@@ -607,10 +630,21 @@
             "Created relation between: Auto controller generator, TOSCA format\n",
             "Created relation between: controller repository, controllers\n",
             "Created relation between: ML model, controllers\n",
+            "Created relation between: Human operator, reports\n",
             "Created relation between: Human operator, reports\n"
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "NOTE- verify atleast the actors.   \n",
+        "Also verify from the console of neo4j"
+      ],
+      "metadata": {
+        "id": "PZp-UEPFu194"
+      }
     },
     {
       "cell_type": "code",
@@ -622,17 +656,17 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "dD7NR950Ry-N",
-        "outputId": "dc1766a9-5f80-4aa4-f5ab-074ec2f94db8"
+        "outputId": "05142cff-7ee7-4606-f831-2dface3122fb"
       },
-      "execution_count": 7,
+      "execution_count": 53,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Found actor-1: Knowledge Base Manager\n",
-            "Found actor-2: AN Orchestrator\n",
-            "Found actor-3: Knowledge Base\n",
+            "Found actor-1: Knowledge Base\n",
+            "Found actor-2: Knowledge Base Manager\n",
+            "Found actor-3: AN Orchestrator\n",
             "Found actor-4: Use case description\n",
             "Found actor-5: TOSCA format\n",
             "Found actor-6: Auto controller generator\n",
@@ -644,6 +678,279 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "FG-AN-USECASE-002\n"
+      ],
+      "metadata": {
+        "id": "xAXqmO5Bu_ki"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "NOTE- in case of duplicate actors, only the use case label will be added.  \n",
+        "So, to help search based on use case label, make sure to add the actor, even if there is duplication among use cases."
+      ],
+      "metadata": {
+        "id": "pyDqgvFSDvkp"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "app.create_node_with_label(\"Experimentation controller\", \"usecase_002\")\n",
+        "app.create_node_with_label(\"scenarios for experimentation\", \"usecase_002\")\n",
+        "app.create_node_with_label(\"AN sandbox\", \"usecase_002\")\n",
+        "app.create_node_with_label(\"simulators\", \"usecase_002\")\n",
+        "app.create_node_with_label(\"reports\", \"usecase_002\")\n",
+        "app.create_node_with_label(\"experiments\", \"usecase_002\")\n",
+        "app.create_node_with_label(\"Knowledge Base\", \"usecase_002\")\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "IoJAMw2DvEj0",
+        "outputId": "cbd37c48-a56a-4fec-ff18-05ad5faac96d",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 54,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Created node: Experimentation controller\n",
+            "Created node: scenarios for experimentation\n",
+            "Created node: AN sandbox\n",
+            "Created node: simulators\n",
+            "Node already exists: reports in ['Actor', 'usecase_001']\n",
+            "adding label usecase_002...\n",
+            "Created node: experiments\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "app.create_rel_with_type_existing_nodes(\"Experimentation controller\", \"decides\", \n",
+        "                                        \"scenarios for experimentation\")\n",
+        "\n",
+        "app.create_rel_with_type_existing_nodes(\"AN sandbox\", \"hosts\", \n",
+        "                                        \"simulators\")\n",
+        "app.create_rel_with_type_existing_nodes(\"AN sandbox\", \"manages\", \n",
+        "                                        \"simulators\")\n",
+        "app.create_rel_with_type_existing_nodes(\"AN sandbox\", \"output\", \n",
+        "                                        \"reports\")\n",
+        "\n",
+        "app.create_rel_with_type_existing_nodes(\"Experimentation controller\", \"triggers\", \n",
+        "                                        \"experiments\")\n",
+        "app.create_rel_with_type_existing_nodes(\"Experimentation controller\", \"output\", \n",
+        "                                        \"reports\")\n",
+        "app.create_rel_with_type_existing_nodes(\"Experimentation controller\", \"executes\", \n",
+        "                                        \"experiments\")\n",
+        "app.create_rel_with_type_existing_nodes(\"Experimentation controller\", \"monitors\", \n",
+        "                                        \"experiments\")\n",
+        "app.create_rel_with_type_existing_nodes(\"Experimentation controller\", \"uses\", \n",
+        "                                        \"AN sandbox\")\n",
+        "app.create_rel_with_type_existing_nodes(\"Experimentation controller\", \"updates\", \n",
+        "                                        \"Knowledge Base\")\n",
+        "\n",
+        "app.create_rel_with_type_existing_nodes(\"experiments\", \"has\", \n",
+        "                                        \"scenarios for experimentation\")"
+      ],
+      "metadata": {
+        "id": "hIFRfkDQzZhz",
+        "outputId": "23d61ad3-61ab-48f3-967b-faa5705c39cf",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 55,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Created relation between: Experimentation controller, scenarios for experimentation\n",
+            "Created relation between: AN sandbox, simulators\n",
+            "Created relation between: AN sandbox, simulators\n",
+            "Created relation between: AN sandbox, reports\n",
+            "Created relation between: Experimentation controller, experiments\n",
+            "Created relation between: Experimentation controller, reports\n",
+            "Created relation between: Experimentation controller, experiments\n",
+            "Created relation between: Experimentation controller, experiments\n",
+            "Created relation between: Experimentation controller, AN sandbox\n",
+            "Created relation between: Experimentation controller, Knowledge Base\n",
+            "Created relation between: experiments, scenarios for experimentation\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "app.find_all_usecase_actors(\"usecase_002\")"
+      ],
+      "metadata": {
+        "id": "kESuu7StzBZC",
+        "outputId": "40b5d51a-2995-4e6d-ed1d-a0c6ca3bc732",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 56,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Found actor-1: reports\n",
+            "Found actor-2: Experimentation controller\n",
+            "Found actor-3: scenarios for experimentation\n",
+            "Found actor-4: AN sandbox\n",
+            "Found actor-5: simulators\n",
+            "Found actor-6: experiments\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "FG-AN-USECASE-**003**\n"
+      ],
+      "metadata": {
+        "id": "kYop_NWy2upE"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "app.create_node_with_label(\"AN Orchestrator\", \"usecase_003\")\n",
+        "app.create_node_with_label(\"Human operator\", \"usecase_003\")\n",
+        "app.create_node_with_label(\"feedback\", \"usecase_003\")\n",
+        "app.create_node_with_label(\"Knowledge Base\", \"usecase_003\")\n",
+        "app.create_node_with_label(\"AN components\", \"usecase_003\")\n"
+      ],
+      "metadata": {
+        "id": "HRpliynu2v-x",
+        "outputId": "be38b5ee-aaa5-4cc9-8400-9ed61a0b464d",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 57,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Node already exists: AN Orchestrator in ['Actor', 'usecase_001']\n",
+            "adding label usecase_003...\n",
+            "Node already exists: Human operator in ['Actor', 'usecase_001']\n",
+            "adding label usecase_003...\n",
+            "Created node: feedback\n",
+            "Node already exists: Knowledge Base in ['Actor', 'usecase_001']\n",
+            "adding label usecase_003...\n",
+            "Created node: AN components\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "app.create_rel_with_type_existing_nodes(\"AN Orchestrator\", \"queries\", \n",
+        "                                        \"AN Orchestrator\")\n",
+        "app.create_rel_with_type_existing_nodes(\"AN Orchestrator\", \"queries\", \n",
+        "                                        \"Human operator\")\n",
+        "app.create_rel_with_type_existing_nodes(\"AN Orchestrator\", \"accept\", \n",
+        "                                        \"feedback\")\n",
+        "app.create_rel_with_type_existing_nodes(\"AN Orchestrator\", \"configures\", \n",
+        "                                        \"AN components\")\n",
+        "app.create_rel_with_type_existing_nodes(\"AN Orchestrator\", \"updates\", \n",
+        "                                        \"Knowledge Base\")\n"
+      ],
+      "metadata": {
+        "id": "ZlYgiEEd5W4L",
+        "outputId": "6b981a01-55b0-48b2-fea0-2b06e52814e3",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 58,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Created relation between: AN Orchestrator, AN Orchestrator\n",
+            "Created relation between: AN Orchestrator, Human operator\n",
+            "Created relation between: AN Orchestrator, feedback\n",
+            "Created relation between: AN Orchestrator, AN components\n",
+            "Created relation between: AN Orchestrator, Knowledge Base\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "FG-AN-USECASE-**004**\n"
+      ],
+      "metadata": {
+        "id": "_niHmj2zA-8o"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "app.create_node_with_label(\"Adaptation controller\", \"usecase_004\")\n",
+        "app.create_node_with_label(\"controllers\", \"usecase_004\")\n",
+        "app.create_node_with_label(\"controller repository\", \"usecase_004\")\n",
+        "app.create_node_with_label(\"Knowledge Base\", \"usecase_004\")\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "vtN4lneABHTa",
+        "outputId": "ebeefba0-2a37-4fb6-9e8c-c0a19c933986",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 59,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Created node: Adaptation controller\n",
+            "Node already exists: controllers in ['Actor', 'usecase_001']\n",
+            "adding label usecase_004...\n",
+            "Node already exists: controller repository in ['Actor', 'usecase_001']\n",
+            "adding label usecase_004...\n",
+            "Node already exists: Knowledge Base in ['Actor', 'usecase_001', 'usecase_003']\n",
+            "adding label usecase_004...\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "app.create_rel_with_type_existing_nodes(\"AN Orchestrator\", \"queries\", \n",
+        "                                        \"AN Orchestrator\")"
+      ],
+      "metadata": {
+        "id": "ks473AsjKtw0"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -671,7 +978,7 @@
       "collapsed_sections": [],
       "name": "build-a-thon-graph-v1.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPXmMJkVV4BLg3opDsSfUfi",
+      "authorship_tag": "ABX9TyM9vWKuENjtxObavoyHTUvw",
       "include_colab_link": true
     },
     "interpreter": {
