--- a/Notebooks2022/build_a_thon_graph_v1.ipynb
+++ b/Notebooks2022/build_a_thon_graph_v1.ipynb
@@ -12,6 +12,15 @@
     },
     {
       "cell_type": "markdown",
+      "source": [
+        "##Introduction"
+      ],
+      "metadata": {
+        "id": "RhHOWZlCnPDk"
+      }
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {
         "id": "xvVYTJnpc8NW"
       },
@@ -19,7 +28,7 @@
         "Created: 14 Apr 2022.   \n",
         "Contact: Vishnu Ram OV.   \n",
         "vishnu.n@ieee.org.   \n",
-        "Licence: available for all purposes under the sun\n"
+        "Licence: available for all purposes under the sun but with acknowledgement and citation to \"ITU FG AN Build-a-thon 2022\"\n"
       ]
     },
     {
@@ -28,7 +37,8 @@
         "id": "TOxLkcQAfFsO"
       },
       "source": [
-        "Refer: https://neo4j.com/docs/aura/auradb/getting-started/create-database/"
+        "##References \n",
+        "[1] https://neo4j.com/docs/aura/auradb/getting-started/create-database/"
       ]
     },
     {
@@ -37,12 +47,12 @@
         "id": "Seq4Lm-HdDJY"
       },
       "source": [
-        "step-1: install neo4j"
+        "##step-1: install neo4j"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -80,12 +90,12 @@
         "id": "P49wR7FPejI6"
       },
       "source": [
-        "step-2: imports"
+        "##step-2: imports"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "id": "CMXk5yZcd-Jt"
       },
@@ -102,12 +112,12 @@
         "id": "QJsfeO0Ve03C"
       },
       "source": [
-        "step-3: define helper class"
+        "##step-3: define helper class"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 36,
+      "execution_count": null,
       "metadata": {
         "id": "FccBUxEIeKf_"
       },
@@ -311,12 +321,12 @@
         "id": "Pjilh9vPe4LY"
       },
       "source": [
-        "step-4: connect to DB"
+        "##step-4: connect to DB"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 37,
+      "execution_count": null,
       "metadata": {
         "id": "6p2nMvmodNw4"
       },
@@ -334,16 +344,25 @@
     },
     {
       "cell_type": "markdown",
+      "source": [
+        "##Examples"
+      ],
+      "metadata": {
+        "id": "W4siCdsInsxH"
+      }
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {
         "id": "v_PlujdPvtcN"
       },
       "source": [
-        "Example-1: Create individual nodes with labels"
+        "###Example-1: Create individual nodes with labels"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 38,
+      "execution_count": null,
       "metadata": {
         "id": "aiKGLHItvp2g",
         "colab": {
@@ -369,7 +388,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Example-1a: try to create duplicate node under different use case"
+        "###Example-1a: try to create duplicate node under different use case"
       ],
       "metadata": {
         "id": "IlzAm-ApdU_t"
@@ -387,7 +406,7 @@
         "id": "5PMotSRCdRdZ",
         "outputId": "5ea3ad2c-ee95-4cd6-cfd6-7e1308dcec8b"
       },
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -402,7 +421,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Example-2: Create relation between 2 existing nodes"
+        "###Example-2: Create relation between 2 existing nodes"
       ],
       "metadata": {
         "id": "0DR2Zu-rQr-9"
@@ -434,7 +453,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Example-3: add a use case label to existing node"
+        "###Example-3: add a use case label to existing node"
       ],
       "metadata": {
         "id": "R1K3tcccQyxj"
@@ -469,7 +488,7 @@
         "id": "5VEb2wKlwakG"
       },
       "source": [
-        "Example-4: Find all nodes with a use case label"
+        "###Example-4: Find all nodes with a use case label"
       ]
     },
     {
@@ -531,7 +550,28 @@
     {
       "cell_type": "markdown",
       "source": [
-        "FG-AN-USECASE-001"
+        "\n",
+        "\n",
+        "---\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "xE5HNPHcoSYr"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##USECASES"
+      ],
+      "metadata": {
+        "id": "Onme80CYn8O7"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "###FG-AN-USECASE-001"
       ],
       "metadata": {
         "id": "2NKgB7ZSRqXL"
@@ -560,7 +600,7 @@
         "id": "g3-zNw1qR--U",
         "outputId": "9648c305-6c18-4223-ad22-757d9870fb15"
       },
-      "execution_count": 51,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -613,7 +653,7 @@
         "id": "w6w8dt-QUUX8",
         "outputId": "e0e0031e-b38d-4332-bc6f-3d7c4d1c62db"
       },
-      "execution_count": 52,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -658,7 +698,7 @@
         "id": "dD7NR950Ry-N",
         "outputId": "05142cff-7ee7-4606-f831-2dface3122fb"
       },
-      "execution_count": 53,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -682,7 +722,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "FG-AN-USECASE-002\n"
+        "###FG-AN-USECASE-002\n"
       ],
       "metadata": {
         "id": "xAXqmO5Bu_ki"
@@ -717,7 +757,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 54,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -770,7 +810,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 55,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -803,7 +843,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 56,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -822,7 +862,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "FG-AN-USECASE-**003**\n"
+        "###FG-AN-USECASE-003\n"
       ],
       "metadata": {
         "id": "kYop_NWy2upE"
@@ -844,7 +884,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 57,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -883,7 +923,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 58,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -901,7 +941,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "FG-AN-USECASE-**004**\n"
+        "###FG-AN-USECASE-004\n"
       ],
       "metadata": {
         "id": "_niHmj2zA-8o"
@@ -923,7 +963,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 59,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -954,6 +994,18 @@
     },
     {
       "cell_type": "markdown",
+      "source": [
+        "\n",
+        "\n",
+        "---\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "y4gZH6d2oNMD"
+      }
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {
         "id": "eBr7q13XvyeB"
       },
@@ -971,6 +1023,15 @@
       "source": [
         "app.close()"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "_CeqehVSoN5P"
+      }
     }
   ],
   "metadata": {
@@ -978,7 +1039,8 @@
       "collapsed_sections": [],
       "name": "build-a-thon-graph-v1.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyM9vWKuENjtxObavoyHTUvw",
+      "toc_visible": true,
+      "authorship_tag": "ABX9TyOOI6Q6ixRHqMFkuw2NMb/s",
       "include_colab_link": true
     },
     "interpreter": {
